updated READ.ME and renamed video JS file

--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
                     </section>
                 </video-controls>
             </controls-wrapper>
-            <video src="media/Onward_explainer_final.mp4"></video>
+            <video poster="" src="media/onward_explainer_final.m4v"></video>
         </video-container>
     </main>
     <footer>
         <p>© 2022, Ryan McDermott <i class="fa-sharp fa-solid fa-heart"></i></p>
     </footer>
-    <script src="js/script.js"></script>
+    <script src="js/video-player.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js" integrity="sha512-gmwBmiTVER57N3jYS3LinA9eb8aHrJua5iQD7yqYCKa5x6Jjc7VDVaEA0je0Lu0bP9j7tEjV3+1qUm6loO99Kw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
